ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: post-micro-services.dev.vn
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: post-service-ip
                port:
                  number: 4000
